# dofbotx_tmp

./: .gitignore  README.md
dofbot_oled/: api_doc.md  dofbot_oled.py  dofbot_oled_bk.py  requirements.txt
dofbotx_ws/src/dofbot_config/: package.xml  setup.cfg  setup.py
dofbotx_ws/src/dofbot_config/config/: dofbot_arm_config.yaml  dofbot_params.json  dofbot_params.yaml
dofbotx_ws/src/dofbot_config/dofbot_config/: parameter_server.py
dofbotx_ws/src/dofbot_config/launch/: param_srv.launch.py
dofbotx_ws/src/dofbot_control/: package.xml  setup.cfg  setup.py
dofbotx_ws/src/dofbot_control/dofbot_control/: DofbotSimpleActionServer.py
dofbotx_ws/src/dofbot_description/: CMakeLists.txt  package.xml
dofbotx_ws/src/dofbot_description/config/: urdf_show.rviz
dofbotx_ws/src/dofbot_description/launch/: display.launch.py  urdf_display.launch.py
dofbotx_ws/src/dofbot_description/urdf/: dofbot.urdf  dofbot_bk_240526.urdf
dofbotx_ws/src/dofbot_interfaces/: CMakeLists.txt  package.xml
dofbotx_ws/src/dofbot_interfaces/action/: GripperCmd.action
dofbotx_ws/src/dofbot_interfaces/msg/: Telemetry.msg
dofbotx_ws/src/dofbot_interfaces/srv/: ComputeKinematics.srv  GetStatus.srv  SetOledMessage.srv
dofbotx_ws/src/dofbot_kinematics/: CMakeLists.txt  package.xml
dofbotx_ws/src/dofbot_kinematics/include/dofbot_kinematics/: dofbot_kinematics_node.hpp
dofbotx_ws/src/dofbot_kinematics/launch/: kinematics.launch.py
dofbotx_ws/src/dofbot_kinematics/src/: dofbot_kinematics_node.cpp
dofbotx_ws/src/dofbot_oled_bridge/: package.xml  setup.cfg  setup.py
dofbotx_ws/src/dofbot_oled_bridge/dofbot_oled_bridge/: oled_bridge_node.py
dofbotx_ws/src/dofbot_services/: package.xml  setup.cfg  setup.py
dofbotx_ws/src/dofbot_services/dofbot_services/: dofbot_client.py  dofbot_server.py
dofbotx_ws/src/dofbot_telemetry/: package.xml  setup.cfg  setup.py
dofbotx_ws/src/dofbot_telemetry/dofbot_telemetry/: Telemetry.py  TelemetrySubs.py  diagnostic_splitter.py  jtop_node.py  robot_telem.py
dofbotx_ws/src/dofbot_telemetry/dofbot_telemetry/telem_utils/: jtop_utils.py  sysinfo.py  test_lib.py
