<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dofbot_kinematics</name>
  <version>0.0.0</version>
  <description>Dofbot Arm Kinematics package.</description>
  <maintainer email="rivascf@gmail.com">Felpe Rivas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <!--depend>orocos_kdl</depend-->
  <depend>dofbot_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
