<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dofbot_telemetry</name>
  <version>0.0.0</version>
  <description>Dofbot telemetry package</description>
  <maintainer email="rivascf@gmail.com">Felipe Rivas</maintainer>
  <license>MIT</license>

  <!--Declaracion de dependencias-->
  <depend>dofbot_interfaces</depend>
  <depend>diagnostic_msgs</depend>

  <!--exec_depend>diagnostic_msgs</exec_depend-->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
